--- a/motaphoto/sass/components/_buttons.scss
+++ b/motaphoto/sass/components/_buttons.scss
@@ -93,3 +93,11 @@ div.contact-form-button {
     border: 1.3px solid #215AFF;
 }
 
+// Button for Lightbox Modal Close
+
+#lightbox-modal-close {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+}
