--- a/motaphoto/sass/custom.scss
+++ b/motaphoto/sass/custom.scss
@@ -1,14 +1,11 @@
-/**
- * Custom Styles
- *
- * This file is for better separation of custom styles.
- * And is compiled into /assets/css/custom.css
- * Where it is enqueued as a custom stylesheet
-
- * You can add your custom styles here.
- *
- * @package Motaphoto
- */
+// Custom Styles
+// This file is for better separation of custom styles.
+// And is compiled into /assets/css/custom.css
+// Where it is enqueued as a custom stylesheet
+//
+// You can add your custom styles here.
+//
+// @package Motaphoto
 
 // IMPORT BASE ELEMENTS (colors, fonts, mixins, reset, typography, and variables)
 @import 'base/base';
@@ -22,16 +19,10 @@
 // IMPORT PAGES (homepage, single-photo)
 @import 'pages/pages'; 
 
-// To be moved later to a separate file but it confirmed
-// that gulp is operating and having an effect
-// on the visual output of the site
-
-
-
 .site-main {
-  width: 100vw;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 body {
@@ -40,4 +31,3 @@ body {
   width: 100%;
   height: 100%;
 }
-
