--- a/motaphoto/sass/layout/_photo-gallery.scss
+++ b/motaphoto/sass/layout/_photo-gallery.scss
@@ -84,3 +84,36 @@ div.photo-overlay {
         opacity: 1;
     }
 }        
+
+@media screen and (max-width: 760px) {
+    div.gallery-photos__container {
+        flex-direction: column;
+        gap: 10px;
+        width: 90%;
+        margin: 50px 10px;
+        height: auto;
+        padding: 0 10px;
+        gap: 30px;
+
+        article.gallery-photo {
+            width: 100%;
+            height: 600px;
+            flex: 1;
+        }
+        
+        div.photo-container {
+            width: 100%;
+            height: 100%;
+            max-height: 600px;
+            overflow: hidden;
+
+            img.attachment-featured-image {
+                object-fit: contain;
+                object-position: center;
+                width: 100%;
+                height: 100%;
+                min-height: 600px;
+            }
+        }
+    }
+}
