--- a/motaphoto/sass/pages/_homepage.scss
+++ b/motaphoto/sass/pages/_homepage.scss
@@ -9,8 +9,7 @@ section#hero-header {
    position: relative;
    overflow: hidden;
    @include flex-center;
- 
-   @include flex-center;
+   align-items: center;
  
    .hero-banner {
      @include full-size-flex-item;
@@ -19,62 +18,66 @@ section#hero-header {
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
+     flex: 1;
+     width: 100%;
+     height: 100%;
+     position: relative;
+     top: 0;
+     left: 0;
 
  
      h1 {
        margin: 0;
        padding: 0;
        align-self: center;
+       flex: 1; 
+       width: 100%;
+       display: flex;
+       position: relative;
+       justify-content: center;
+       align-self: center;
+       flex-wrap: nowrap;
      }
    }
 
    
 }
 
-// Hero Header Banner
-section#hero-header {
-   width: 100vw;
-   height: 960px;
-   margin: 0;
-   position: relative;
-   overflow: hidden;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+// Stylesheet for dropdown menus in main photo gallery are in ' layout/_photo-gallery.scss '
+// Stylesheet for filter menus are in ' components/_filter-menus.scss'
 
-   .hero-banner {
-      display: flex;
-      flex: 1;
-      width: 100%;
-      height: 100%;
-      position: relative;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+// Load-more button container for main photo gallery
+// Button style is in ' components/_buttons.scss '
 
-         h1 {
-               flex: 1;
-               width: 100%;
-               margin: 0;
-               padding: 0;
-               display: flex;
-               position: relative;
-               justify-content: center;
-               align-self: center;
-               flex-wrap: nowrap;
-            }
-   }
-}
-
-
-.load-more {
+div.load-more {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 50px auto;
    width: 50%;
    height: 100px;
+}
+
+// Media Queries
+@media screen and (max-width: 760px) {
+   section#hero-header {
+      height: 60vh;
+
+      .hero-banner {
+         h1 {
+            font-size: 2.8rem;
+         }
+      }
+   }
+
+   section.photo-catalogue {
+      width: 100%;
+      height: auto;
+      margin: 50px auto;
+      padding: auto;
+      display: flex;
+      position: relative;
+      box-sizing: border-box;
+   }
+
 }
