--- a/motaphoto/sass/layout/_header.scss
+++ b/motaphoto/sass/layout/_header.scss
@@ -14,10 +14,10 @@
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    
 }
 
 .logo-container {
+    min-width: 200px;
     max-width: 30%;
     height: 80px;
     display: flex;
@@ -25,23 +25,19 @@
     align-items: center;
     margin-left: 5%;
     margin-right: -5%;
+    flex: 1;
     .custom-logo-link {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50%; 
-
-        a {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+        max-width: 200px;
+        max-height: 80px;
+        height: auto;
+        width: auto;
 
         img {
-            max-height: 100%; /* Adjust to control the logo size, maintaining aspect ratio */
-            max-width: 100%; /* Adjust to control the logo size, maintaining aspect ratio */
+            width: 100%;
+            height: 100%; 
         }
     }
 }
@@ -56,6 +52,7 @@
     border: none;
     cursor: pointer;
     display: none; /* Hidden by default */
+    right: 40px;
 
     span {
         display: block;
@@ -82,15 +79,13 @@
 
 /* Mobile menu styling */
 .mobile-menu {
-    display: none;
+    display: none; /* Hidden by default */
     position: fixed;
-    top: 80px;
+    top: 80px; 
     left: 0;
     width: 100%;
     height: calc(100vh - 80px);
-    background-color: white;
     z-index: 1000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
 
     &.open {
@@ -121,16 +116,36 @@
     }
 }
 
+/* Media queries for mobile */
 @media screen and (max-width: 768px) {
     #header-navigation {
         display: none;
     }
 
     .mobile-menu-container {
-        display: flex; // Show the mobile menu container on mobile
+        display: flex; 
         justify-content: center;
         align-items: center;
-        margin-right: 20px;
+        margin-right: 40px;
+        max-width: 100px;
+    }
+
+    .burger-btn {
+        display: flex;
+
+        &.open {
+            span {
+                &:nth-child(1) {
+                    transform: rotate(45deg) translate(5px, 5px);
+                }
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(5px, -5px);
+                }
+            }
+        }
     }
 
     .mobile-menu {
@@ -177,7 +192,7 @@
 
 
     .burger-btn {
-        display: flex; // Show the burger button on mobile
+        display: flex; // Show the burger button on mobile 
         &.btn-close {
             span {
                 &:nth-child(1) {
