--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1054,13 +1054,13 @@ section.photo-catalogue > .photo-filters .sorting-options {
   background-color: black;
   transition: all 0.3s ease;
 }
-.burger-btn.btn-close span:nth-child(1) {
+.burger-btn.close span:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
-.burger-btn.btn-close span:nth-child(2) {
+.burger-btn.close span:nth-child(2) {
   opacity: 0;
 }
-.burger-btn.btn-close span:nth-child(3) {
+.burger-btn.close span:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
 }
 
@@ -1073,17 +1073,18 @@ section.photo-catalogue > .photo-filters .sorting-options {
   width: 100%;
   height: calc(100vh - 80px);
   z-index: 1000;
-  padding: 20px;
 }
 .mobile-menu.open {
-  display: block;
+  display: flex;
+  align-content: center;
 }
 .mobile-menu ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: calc(100vh - 80px);
+  width: 100%;
 }
 .mobile-menu ul li {
   margin: 10px 0;
@@ -1129,45 +1130,45 @@ section.photo-catalogue > .photo-filters .sorting-options {
     background-color: #E00000;
     height: 90vh;
   }
-  .mobile-menu.open .menu-menu-principal-container {
-    width: 100%;
-    height: 80%;
-    margin: 0;
-    padding: 0;
+  .mobile-menu.open {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .mobile-menu.open .primary-menu {
+  .mobile-menu.open #primary-menu {
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 50%;
+    height: 30vh;
+    width: 100%;
+    align-items: center;
+    gap: 20px;
   }
-  .mobile-menu.open .primary-menu li {
+  .mobile-menu.open #primary-menu li {
     margin: 10px 0;
   }
-  .mobile-menu.open .primary-menu li a {
+  .mobile-menu.open #primary-menu li a {
     text-decoration: none;
     color: white;
     padding: 10px;
-    font-size: 1.5rem;
+    font-size: 3rem;
     display: block;
     font-family: Space-Mono, monospace;
   }
-  .mobile-menu.open .primary-menu li a:hover, .mobile-menu.open .primary-menu li a:focus {
+  .mobile-menu.open #primary-menu li a:hover, .mobile-menu.open #primary-menu li a:focus {
     font-weight: 700;
   }
   .burger-btn {
     display: flex;
   }
-  .burger-btn.btn-close span:nth-child(1) {
+  .burger-btn.open span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
   }
-  .burger-btn.btn-close span:nth-child(2) {
+  .burger-btn.open span:nth-child(2) {
     opacity: 0;
   }
-  .burger-btn.btn-close span:nth-child(3) {
+  .burger-btn.open span:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -5px);
   }
 }
