--- a/motaphoto/sass/layout/_header.scss
+++ b/motaphoto/sass/layout/_header.scss
@@ -62,7 +62,7 @@
         transition: all 0.3s ease;
     }
 
-    &.btn-close {
+    &.close {
         span {
             &:nth-child(1) {
                 transform: rotate(45deg) translate(5px, 5px);
@@ -86,10 +86,10 @@
     width: 100%;
     height: calc(100vh - 80px);
     z-index: 1000;
-    padding: 20px;
 
     &.open {
-        display: block;
+        display: flex;
+        align-content: center;
     }
 
     ul {
@@ -97,7 +97,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100%;
+        height: calc(100vh - 80px);
+        width: 100%;
 
         li {
             margin: 10px 0;
@@ -121,6 +122,7 @@
     #header-navigation {
         display: none;
     }
+    
 
     .mobile-menu-container {
         display: flex; 
@@ -154,21 +156,22 @@
         margin-top: 40px;
         background-color:#E00000;
         height: 90vh;
+
         &.open {
-            .menu-menu-principal-container{
-                width: 100%;
-                height: 80%;
-                margin: 0;
-                padding: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .primary-menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            #primary-menu {
+                position: fixed;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                height: 50%;
+                height: 30vh;
+                width: 100%;
+                align-items: center;
+                gap: 20px;
+
                 
                 li {
                     margin: 10px 0;
@@ -176,7 +179,7 @@
                         text-decoration: none;
                         color: white;
                         padding: 10px;
-                        font-size: 1.5rem;
+                        font-size: 3rem;
                         display: block;
                         font-family: Space-Mono, monospace;
                         &:hover,
@@ -193,7 +196,7 @@
 
     .burger-btn {
         display: flex; // Show the burger button on mobile 
-        &.btn-close {
+        &.open {
             span {
                 &:nth-child(1) {
                     transform: rotate(45deg) translate(5px, 5px);
