styles for responsive design finished

--- a/motaphoto/sass/base/_fonts.scss
+++ b/motaphoto/sass/base/_fonts.scss
@@ -1,8 +1,9 @@
 /* Space Mono Fonts */
 
 @font-face {
-    font-family: 'Space-Mono', monospace;
+    font-family: 'Space-Mono';
     src: 
+        url('../../assets/fonts/Space_Mono/spacemono-bold-demo.html') format('html'),
         url('../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2') format('woff2'),
         url('../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff') format('woff'),
@@ -13,7 +14,7 @@
     }
 
 @font-face {
-    font-family: 'Space-Mono', monospace ;
+    font-family: 'Space-Mono' ;
     src:
         url('../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.eot') format('eot'), 
         url('../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff2') format('woff2'),
@@ -26,7 +27,7 @@
 }
 
 @font-face {
-    font-family: 'Space-Mono', monospace;
+    font-family: 'Space-Mono';
     src: 
         url('../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff2') format('woff2'),
@@ -38,7 +39,7 @@
 }
 
 @font-face {
-    font-family: 'Space-Mono', monospace;
+    font-family: 'Space-Mono';
     src: 
         url('../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.eot') format('eot'),
         url('../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff2') format('woff2'),
