--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -10,25 +10,25 @@ html {
 
 /* Space Mono Fonts */
 @font-face {
-  font-family: "Space-Mono", monospace;
-  src: url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.svg") format("svg");
+  font-family: "Space-Mono";
+  src: url("../../assets/fonts/Space_Mono/spacemono-bold-demo.html") format("html"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.svg") format("svg");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.svg") format("svg");
   font-weight: bold;
   font-style: italic;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.svg#space_monoitalic") format("svg");
   font-weight: normal;
   font-style: italic;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.svg#space_monoregular") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -147,14 +147,14 @@ html {
 body,
 a,
 button {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   font-weight: normal;
   font-style: normal;
   color: black;
   text-transform: uppercase;
 }
 
-p,
+p:not(.photo-labels),
 span > p,
 input {
   font-family: "Poppins";
@@ -163,9 +163,14 @@ input {
   font-size: 14px;
 }
 
-h1, h2, h3, h4, h5, h6 > span {
-  font-family: "Space-Mono", monospace;
-  font-weight: 400;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Space-Mono";
+  font-weight: bold;
+  font-style: italic;
 }
 
 h1 {
@@ -173,13 +178,13 @@ h1 {
   color: transparent;
   -webkit-text-stroke: 3px white;
   -moz-text-stroke: 3px white;
-  font-weight: 700;
+  font-weight: bold;
   font-style: italic;
 }
 
 h2 {
   font-size: 24px;
-  font-weight: 400;
+  font-weight: normal;
   font-style: italic;
 }
 @media screen and (max-width: 768px) {
@@ -190,7 +195,7 @@ h2 {
 
 h3 {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: normal;
   font-style: normal;
 }
 @media screen and (max-width: 768px) {
@@ -201,7 +206,7 @@ h3 {
 
 h4, h5 {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -228,8 +233,8 @@ h4, h5 {
 }
 
 .photo-category {
-  font-family: "Space-Mono", monospace;
-  font-weight: 400;
+  font-family: "Space-Mono";
+  font-weight: normal;
   font-style: normal;
   font-size: 14px;
   text-transform: uppercase;
@@ -258,8 +263,8 @@ h4, h5 {
   }
 }
 span.photo_category {
-  font-family: "Space-Mono", monospace;
-  font-weight: 400;
+  font-family: "Space-Mono";
+  font-weight: normal;
   font-style: normal;
   font-size: 14px;
   text-transform: uppercase;
@@ -278,25 +283,25 @@ span.photo_reference {
 
 /* Space Mono Fonts */
 @font-face {
-  font-family: "Space-Mono", monospace;
-  src: url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.svg") format("svg");
+  font-family: "Space-Mono";
+  src: url("../../assets/fonts/Space_Mono/spacemono-bold-demo.html") format("html"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bold-mota-photo-font.svg") format("svg");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-bolditalic-mota-photo-font.svg") format("svg");
   font-weight: bold;
   font-style: italic;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-italic-mota-photo-font.svg#space_monoitalic") format("svg");
   font-weight: normal;
   font-style: italic;
 }
 @font-face {
-  font-family: "Space-Mono", monospace;
+  font-family: "Space-Mono";
   src: url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.eot") format("eot"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff2") format("woff2"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.woff") format("woff"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.ttf") format("truetype"), url("../../assets/fonts/Space_Mono/spacemono-regular-mota-photo-font.svg#space_monoregular") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -776,6 +781,8 @@ section.photo-catalogue > .photo-filters .sorting-options {
     align-items: center;
     width: 100%;
     gap: 20px;
+    margin: 0;
+    margin-bottom: 20px;
   }
   section.photo-catalogue > div.photo-filters .filters-options,
   section.photo-catalogue > div.photo-filters .sorting-options {
@@ -1231,6 +1238,7 @@ section.photo-catalogue > .photo-filters .sorting-options {
   margin: 5% auto;
   background: #fff;
   border: 5px solid #000;
+  box-sizing: border-box;
 }
 #contact-modal .modal-container .modal-contact_btn-close {
   display: flex;
@@ -1289,6 +1297,7 @@ section.photo-catalogue > .photo-filters .sorting-options {
 #contact-modal .wpcf7 {
   display: flex;
   justify-content: center;
+  flex: 1;
 }
 #contact-modal .wpcf7 form.wpcf7-form {
   max-width: 100%;
@@ -1317,6 +1326,63 @@ section.photo-catalogue > .photo-filters .sorting-options {
   font-size: 14px;
 }
 
+@media screen and (max-width: 768px) {
+  #contact-modal {
+    padding: 20px 0;
+    margin: 0;
+    width: 100%;
+  }
+  #contact-modal .modal-container {
+    align-items: center;
+    width: 90%;
+    max-width: 80%;
+    max-height: 100vh;
+    margin: 5% auto;
+  }
+  #contact-modal .modal-container .modal-contact_btn-close {
+    max-height: 5%;
+  }
+  #contact-modal .modal-container > .modal-content {
+    max-height: 95%;
+  }
+  #contact-modal .modal-container > .modal-content .modal-content__header {
+    max-height: calc(95vh - 5%);
+  }
+  #contact-modal .modal-container > .modal-content .modal-content__header #contact-banner {
+    min-height: 100%;
+    flex: 1;
+  }
+  #contact-modal .modal-container > .modal-content .modal-content__form {
+    height: 75%;
+    flex: 1;
+  }
+  #contact-modal .wpcf7 {
+    height: 100%;
+    min-height: 60vh;
+  }
+  #contact-modal .wpcf7 form.wpcf7-form {
+    min-height: 100%;
+  }
+  #contact-modal .wpcf7 form.wpcf7-form div.contact-form-entries label {
+    font-size: 12px;
+    margin: 10px 0;
+    line-height: 15px;
+  }
+  #contact-modal .wpcf7 form.wpcf7-form div.contact-form-entries input.wpcf7-form-control {
+    font-size: 12px;
+    height: 30px;
+    line-height: 15px;
+  }
+  #contact-modal .wpcf7 form.wpcf7-form div.contact-form-entries textarea {
+    font-size: 12px;
+    height: 100px;
+  }
+  #contact-modal .wpcf7 form.wpcf7-form div.contact-form-button {
+    max-height: 50px;
+    margin: 0;
+    height: auto;
+  }
+}
 div.gallery-photos__container {
   display: flex;
   justify-content: center;
@@ -1571,9 +1637,7 @@ div.contact-form-button p input:hover {
   margin: 0;
 }
 .entry-meta__details p {
-  font-weight: 400;
-  font-family: "Poppins";
-  font-size: calc(14px + 0.5vw);
+  font-size: 14px;
 }
 
 div.photo-contact-wrapper {
@@ -1668,20 +1732,141 @@ h3.related-photos__title {
 }
 
 @media screen and (max-width: 768px) {
-  .entry-meta__title {
-    font-size: calc(3em - 0.5vw);
-  }
-  .entry-meta__details p {
-    font-size: calc(1.2em - 0.5vw);
-  }
-  .contact-wrapper p {
-    font-size: calc(1em - 0.5vw);
-  }
-  .btn-cta {
-    font-size: calc(1em - 0.5vw);
-  }
-  .related-photo {
+  section#photo-page {
     width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  section#photo-page div.photo-display-wrapper {
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100vw !important;
+    display: flex;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(1) {
+    width: 100%;
+    order: 1;
+    max-width: 100%;
+    min-width: 100%;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(1) div.entry-meta {
+    position: relative;
+    top: 0;
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin: 0;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(1) h2.entry-meta__title {
+    min-width: 60%;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    margin-left: 10%;
+    flex: 1;
+    font-size: 3.2em;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(1) div.entry-meta__details {
+    min-width: 80%;
+    margin-left: 10%;
+    font-size: 12px;
+    margin-bottom: 30px;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(1) div.entry-meta__details .photo-labels {
+    line-height: 20px;
+    letter-spacing: 0.2em;
+    width: 100%;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(2).photo-display {
+    width: 100%;
+    order: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    max-width: 100%;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(2).photo-display figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 80%;
+  }
+  section#photo-page div.photo-display-wrapper article:nth-child(2).photo-display img {
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+  }
+  section#photo-page div.photo-contact-wrapper {
+    height: 200px;
+  }
+  section#photo-page div.photo-contact-wrapper .sub-photo-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  section#photo-page div.photo-contact-wrapper .sub-photo-container article.contact-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 40px 0;
+    gap: 20px;
+  }
+  section#photo-page div.photo-contact-wrapper .sub-photo-container article.contact-wrapper div.cta-text {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 21px;
+    letter-spacing: 0.5px;
+    padding-left: 20%;
+  }
+  section#photo-page div.photo-contact-wrapper .sub-photo-container article.contact-wrapper > button.btn-cta {
+    width: 80%;
+    margin: 0;
+    align-self: center;
+    justify-content: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 30px;
+  }
+  section#photo-page div.photo-contact-wrapper .sub-photo-container > article.preview-wrapper {
+    display: none;
+  }
+  section#related-photos {
+    width: 100%;
+    padding: 0;
+    margin: 0 0 50px 0;
+  }
+  section#related-photos div.gallery-photos__container {
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 80%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 20px;
+  }
+  section#related-photos div.gallery-photos__container h3.related-photos__title {
+    width: 100%;
+    justify-content: center;
+    margin: 0;
+    padding: 40px 0;
+    align-self: center;
+    line-height: 30px;
+    font-size: 24px;
+    letter-spacing: 2px;
   }
 }
 section#hero-header {
@@ -1751,6 +1936,10 @@ div.load-more {
     display: flex;
     position: relative;
     box-sizing: border-box;
+  }
+  div.load-more {
+    width: 100%;
+    margin: 20px auto;
   }
 }
 .site-main {
