--- a/motaphoto/sass/layout/_contact.scss
+++ b/motaphoto/sass/layout/_contact.scss
@@ -88,7 +88,7 @@
         flex: 1;
         form.wpcf7-form {
             max-width: 100%;
-            align-items: left;
+            align-items: flex-start;
             div.contact-form-entries {
                 text-align: left;
                 label {
