put back margin-right on content block

--- a/motaphoto/sass/pages/_single-photo.scss
+++ b/motaphoto/sass/pages/_single-photo.scss
@@ -101,6 +101,7 @@ div.photo-contact-wrapper {
 
   .content-block {
     position: relative;
+    margin-right: 5%;
     display: flex;
     width: 81px;
     height: 90%;
