--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1661,6 +1661,7 @@ div.photo-contact-wrapper .sub-photo-container article.preview-wrapper {
 
 .content-block {
   position: relative;
+  margin-right: 5%;
   display: flex;
   width: 81px;
   height: 90%;
