--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * Base Styles
  *
@@ -163,6 +164,20 @@ input {
   font-size: 14px;
 }
 
+ul,
+li,
+a {
+  list-style: none;
+  text-decoration: none;
+  font-family: "Space-Mono";
+  padding: 0;
+  margin: 0;
+}
+
+a:hover, a:focus {
+  font-weight: 700;
+}
+
 h1,
 h2,
 h3,
@@ -242,6 +257,37 @@ h4, h5 {
   line-height: 21px;
 }
 
+span.photo_category {
+  font-family: "Space-Mono";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: white;
+  line-height: 21px;
+}
+
+span.photo_reference {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: white;
+}
+
+span.copyright p.copyright-mention {
+  font-family: "Space-Mono";
+  font-size: 16px;
+  text-transform: uppercase;
+  color: black;
+  line-height: 21px;
+  padding: 10px;
+}
+span.copyright p.copyright-mention:hover, span.copyright p.copyright-mention:focus {
+  font-weight: 700;
+}
+
 @media (max-width: 1200px) {
   h1 {
     font-size: calc(66px + 2vw);
@@ -262,25 +308,6 @@ h4, h5 {
     font-size: calc(40px + 2vw);
   }
 }
-span.photo_category {
-  font-family: "Space-Mono";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 14px;
-  text-transform: uppercase;
-  color: white;
-  line-height: 21px;
-}
-
-span.photo_reference {
-  font-family: "Poppins";
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 21px;
-  text-transform: uppercase;
-  color: white;
-}
-
 /* Space Mono Fonts */
 @font-face {
   font-family: "Space-Mono";
@@ -497,8 +524,6 @@ img {
  *
  * @package Motaphoto
  */
-/* Navigation styling for the header and footer navbars and menus */
-/* Navigation styling */
 .main-navigation {
   flex-grow: 1;
   display: flex;
@@ -521,20 +546,6 @@ img {
 .main-navigation ul#primary-menu li a {
   padding: 10px;
   display: block;
-}
-
-ul,
-li,
-a {
-  list-style: none;
-  text-decoration: none;
-  font-family: "Space-Mono", monospace;
-  padding: 0;
-  margin: 0;
-}
-
-a:hover, a:focus {
-  font-weight: 700;
 }
 
 .btn-contact,
@@ -1172,46 +1183,67 @@ section.photo-catalogue > .photo-filters .sorting-options {
     transform: rotate(-45deg) translate(5px, -5px);
   }
 }
-/* Footer menu styling */
-.footer-nav {
-  border-top: 1px solid black;
+footer {
   width: 100%;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   height: 80px;
+  align-items: center;
+  /* Removed 'Tous Droits Réservés' as a link/page and incorporated the text
+  * directly into the footer and added typography changes to /base/_typography.scss */
 }
-.footer-nav ul#footer-menu {
+footer .footer-nav ul#footer-menu {
   display: flex;
   flex-shrink: 1;
   margin: auto;
 }
-.footer-nav ul#footer-menu li {
+footer .footer-nav ul#footer-menu li {
   margin: 0 15px;
   min-width: fit-content;
 }
-.footer-nav ul#footer-menu li a {
+footer .footer-nav ul#footer-menu li a {
   text-decoration: none;
   color: black;
   padding: 10px;
   display: block;
 }
-.footer-nav ul#footer-menu li a:hover, .footer-nav ul#footer-menu li a:focus {
+footer .footer-nav ul#footer-menu li a:hover, footer .footer-nav ul#footer-menu li a:focus {
   font-weight: 700;
 }
+footer .copyright {
+  display: flex;
+  justify-content: center;
+  margin: 0 15px;
+}
 
-/* Responsive styling */
 @media screen and (max-width: 768px) {
-  .footer-nav {
+  footer {
+    flex-direction: column;
     height: auto;
-    border-top: 1px solid black;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
   }
-  .footer-nav ul#footer-menu {
+  footer .footer-nav {
+    height: auto;
+  }
+  footer .footer-nav ul#footer-menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     max-height: 100px;
     margin-top: 30px;
+  }
+  footer .copyright {
+    margin: 0;
+    padding: 0;
+  }
+  footer .copyright p {
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
   }
 }
 #contact-modal {
@@ -1934,6 +1966,52 @@ div.load-more {
     margin: 20px auto;
   }
 }
+body.privacy-policy div#page > div#content article#post-37 {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px auto;
+}
+body.privacy-policy div#page > div#content article#post-37 .entry-header h1 {
+  font-size: 92px;
+  color: black;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+}
+body.privacy-policy div#page > div#content article#post-37 .entry-content h2,
+body.privacy-policy div#page > div#content article#post-37 .entry-content h3 {
+  font-family: "Space-Mono";
+  text-transform: none;
+  font-weight: bold;
+  font-style: italic;
+  text-align: left;
+}
+body.privacy-policy div#page > div#content article#post-37 .entry-content p,
+body.privacy-policy div#page > div#content article#post-37 .entry-content li {
+  font-family: "Poppins";
+  text-transform: none;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  margin: 10px 0;
+  padding: 10px 0;
+  line-height: 20px;
+}
+body.privacy-policy div#page > div#content article#post-37 .entry-content > ul {
+  justify-content: flex-start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+}
+body.privacy-policy div#page > div#content article#post-37 .entry-content > ul li {
+  list-style: disc;
+  width: 70%;
+  justify-content: space-between;
+}
+
 .site-main {
   margin: 0;
   padding: 0;
