fixed ressource error for poppins font

--- a/motaphoto/sass/base/_fonts.scss
+++ b/motaphoto/sass/base/_fonts.scss
@@ -84,7 +84,7 @@
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.woff2') format('woff2'),
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.woff') format('woff'),
         url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.ttf') format('truetype'),
-        url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.svg#poppinsbold') format('svg');
+        url('../../assets/fonts/Poppins/poppins-bold-mota-photo-font.svg') format('svg');
     font-weight: 700;
     font-style: normal;
 
